# backend

./: .gitignore  Dockerfile  README.md  Requirements.txt  pyproject.toml
app/: models.py  server.py  setup.py
app/crawler/: crawler.py  vector_database.py
app/routers/: conversation.py  employee_conv.py  file.py  rooms.py  wizard.py
